# receipt-report-generator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: monthly.yml  publish.yml
receipt_report/: __main__.py  config.py  mailer.py  main.py  notify.py  pdf_builder.py  providers.json  providers.py
